test: improve validation error messages and mock activity listing in tests